tests/transpiler/x/zig/partial_application.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/partial_application.zig:9:18: error: expected 2 argument(s), found 1
    const add5 = add(5);
                 ^~~
/workspace/mochi/tests/transpiler/x/zig/partial_application.zig:4:1: note: function declared here
fn add(a: i64, b: i64) i64 {
^~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
