tests/transpiler/x/zig/partial_application.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:58 +0000
const std = @import("std");

fn add(a: i64, b: i64) i64 {
    return a + b;
}

pub fn main() void {
    const add5 = add(5);
    try std.io.getStdOut().writer().print("{any}\n", .{add5(3)});
}
